@@ -10,6 +10,10 @@ All:
 - Fixed wxScopeGuard to work with VC++, documented it.
 - Fixed proxy handling in wxURL.
 
+All (GUI):
+
+- Added wxXmlResource::Unload()
+
 wxMSW:
 
 - Fixed multiline tooltips handling.
